Обновление стилей библеотеки

--- a/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
+++ b/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
@@ -16,4 +16,9 @@
 }
 .WidgetContainer {
   background-color: var(--BackgroundColor);
+  pointer-events: visible;
+}
+
+.Clicked {
+  cursor: pointer;
 }
