--- a/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
+++ b/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
@@ -17,6 +17,10 @@
 .WidgetContainer {
   background-color: var(--BackgroundColor);
   pointer-events: visible;
+  display: block;
+  width: fit-content;
+  height: fit-content;
+  padding: 5px;
 }
 
 .Clicked {
