--- a/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
+++ b/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
@@ -14,6 +14,9 @@
   display: flex;
   flex-direction: column;
 }
+.FlexRow {
+  display: flex;
+}
 .WidgetContainer {
   background-color: var(--BackgroundColor);
   pointer-events: visible;
