Обновление панели заголовка для виджетов

--- a/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
+++ b/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
@@ -17,6 +17,10 @@
 .FlexRow {
   display: flex;
 }
+.FlexRowGroup {
+  display: flex;
+  gap: 10px;
+}
 .WidgetContainer {
   background-color: var(--BackgroundColor);
   pointer-events: visible;
