--- a/src/Modules/AngularMapLibreGLModule/Components/DateTimeIntervalComponent/DateTimeIntervalComponent.html
+++ b/src/Modules/AngularMapLibreGLModule/Components/DateTimeIntervalComponent/DateTimeIntervalComponent.html
@@ -1,4 +1,4 @@
-<div class="WidgetRow">
+<div class="WidgetRow FlexRowGroup">
   <div class="FlexRowGroup">
     <nz-icon nzType="step-backward" nzTheme="fill" />
     <nz-date-picker
