--- a/src/Modules/AngularMapLibreGLModule/Components/DateTimeIntervalComponent/DateTimeIntervalComponent.html
+++ b/src/Modules/AngularMapLibreGLModule/Components/DateTimeIntervalComponent/DateTimeIntervalComponent.html
@@ -21,7 +21,14 @@
 <div class="WidgetRow" *ngIf="this.IsShowShiftOptions">
   <div class="FlexRowGroup">
     <nz-icon nzType="clock-circle" nzTheme="outline" />
-    <nz-select [nzSize]="'small'" [nzPlaceHolder]="'Выберите вариант'" />
+    <nz-select [nzSize]="'small'" [nzPlaceHolder]="'Выберите вариант'">
+      <nz-option [nzValue]="'CurrentShift'" [nzLabel]="'Текущая смена'" />
+      <nz-option [nzValue]="'PreviousShift'" [nzLabel]="'Предыдущая смена'" />
+      <nz-option [nzValue]="'CurrentDay'" [nzLabel]="'Текущие сутки'" />
+      <nz-option [nzValue]="'PreviousDay'" [nzLabel]="'Предыдущие сутки'" />
+      <nz-option [nzValue]="'InTwoDays'" [nzLabel]="'За 2е суток'" />
+      <nz-option [nzValue]="'InThreeDays'" [nzLabel]="'За 3е суток'" />
+    </nz-select>
   </div>
   <div>В работе <nz-switch /></div>
 </div>
