Дополнен инструмент проектов бурения

--- a/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
+++ b/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
@@ -9,7 +9,10 @@
   justify-content: center;
   align-items: center;
 }
-
+.FlexCenterVertical {
+  display: flex;
+  align-items: center;
+}
 .FlexColumn {
   display: flex;
   flex-direction: column;
