Обновлены стили и добавлен загрузчик для инструмента транспорта

--- a/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
+++ b/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
@@ -17,13 +17,14 @@
   display: flex;
   flex-direction: column;
 }
+
+.MinimalGap {
+  gap: 10px;
+}
 .FlexRow {
   display: flex;
 }
-.FlexRowGroup {
-  display: flex;
-  gap: 10px;
-}
+
 .WidgetContainer {
   background-color: var(--BackgroundColor);
   pointer-events: visible;
