--- a/src/Modules/AngularMapLibreGLModule/Components/TitlePanelComponent/TitlePanelComponent.html
+++ b/src/Modules/AngularMapLibreGLModule/Components/TitlePanelComponent/TitlePanelComponent.html
@@ -1,6 +1,6 @@
 <div class="WidgetRow">
   <span>{{this.Title}}</span>
-  <div class="FlexRowGroup">
+  <div class="FlexRow MinimalGap">
     <nz-icon
       (click)="this.ChangeShowInternalContent(!this.IsShowInternalContent)"
       nzType="up"
