Добавил скрытие с экрана контейнеров для пустых виджетов

--- a/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
+++ b/src/Modules/AngularMapLibreGLModule/Assets/Styles/Styles.css
@@ -25,7 +25,7 @@
   display: flex;
 }
 
-.WidgetContainer {
+.WidgetContainer:not(:empty) {
   background-color: var(--BackgroundColor);
   pointer-events: visible;
   display: block;
